--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#59C1B6</color>
-    <color name="colorPrimaryDark">#85DDD1</color>
-    <color name="colorAccent">#731235</color>
+    <color name="colorPrimary">#079E8E</color>
+    <color name="colorPrimaryDark">#0D5E53</color>
+    <color name="colorAccent">#EF1564</color>
+    <color name="colorBlack">#000000</color>
+    <color name="colorPrimaryVariant">#800000</color>
+    <color name="colorOnPrimary">#000000</color>
+    <color name="colorSecondary">#2E8B57</color>
+    <color name="colorSecondaryVariant">#32CD32</color>
+    <color name="colorOnSecondary">#000000</color>
 </resources>
