--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -42,6 +42,16 @@
         android:textColor="@color/colorBlack"
         android:textSize="30sp" />
 
+    <Button
+        android:id="@+id/AlertDialog"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="150dp"
+        android:layout_marginBottom="50dp"
+        android:layout_weight="1"
+        android:text="Attention"/>
+
 
 </LinearLayout>
 
